# Solar-Panel-Inspection

./: Program_logic.pages  README.md  algorithm .pages  eris - kamera position.xlsx
Interface/: ClickableLabel.cpp  ERIS.cpp  ERIS.h  ERIS.ui  README.md  StdAfx.h  hGraphics.h  main.cpp
Interface/src - working/: CMakeLists.txt  ERIS.cpp  ERIS.ui  main.cpp  second_screen.ui
dashboard/: camera.m  camera.py  csv_for_dashboard.py  dash_create.py  outlier_detection.py
src - working/: ERIS.h  demoDlg.cpp  hIRBACS.h  oGraphics.cpp  oIRBACS.cpp  third_screen.ui
